<package>
  <name>behavior_search_object</name>
  <version>1.0.0</version>
  <description>
     Looks for an object at the current waypoint.
  </description>
  <maintainer email="schillinger@sim.tu-darmstadt.de">Philipp Schillinger</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/behavior_search_object</url>
  <author>Philipp Schillinger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>flexbe_argos_states</run_depend>

</package>