<package>
  <name>behavior_tell_random_joke</name>
  <version>1.0.0</version>
  <description>
     Lets the robot tell a random joke.
  </description>
  <maintainer email="schillinger@sim.tu-darmstadt.de">Philipp Schillinger</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/behavior_tell_random_joke</url>
  <author>Philipp Schillinger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>flexbe_argos_states</run_depend>

</package>