<package>
  <name>vigir_behavior_sweep_test_behavior</name>
  <version>1.0.0</version>
  <description>
     Performs a short sweep and logs some stuff.
  </description>
  <maintainer email="schillinger@sim.tu-darmstadt.de">Philipp Schillinger</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/vigir_behavior_sweep_test_behavior</url>
  <author>Philipp Schillinger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>flexbe_argos_states</run_depend>

</package>